<resources>
    <string name="app_name">LatihanNavigation</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login_header">LOGIN</string>
    <string name="register"><u>Register</u></string>
    <string name="login"><u>Login</u></string>
    <string name="register_header">REGISTER</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="name">Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="logout">Logout</string>
</resources>